--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "slick-carousel": "~1.5.8",
     "superslides": "0.6.2",
     "velocity": "~1.2.2",
-    "WOW": "~1.1.2"
+    "WOW": "~1.1.2",
+    "jquery-smooth-scroll": "~1.5.6"
   }
 }
